# CuOps

./: .gitignore  CMakeLists.txt  README.md
cmake/: CUDA.cmake
common/: CMakeLists.txt  cnpy.cpp  cnpy.h  perf.hpp  utils.hpp
examples/: CMakeLists.txt
examples/common/: perf.hpp  utils.hpp
examples/cute/: CMakeLists.txt
examples/cute/copy/: CMakeLists.txt  copy.cu
examples/cute/layout/: CMakeLists.txt  layout.cu
examples/cute/mma/: mma.cu
examples/cute/tensor/: CMakeLists.txt  tensor.cu
examples/cute_layout/: CMakeLists.txt  cute_layout.cu
examples/reduce/: CMakeLists.txt  reduce.cu
examples/template/: CMakeLists.txt  template.cu
examples/transpose/: CMakeLists.txt  transpose.cu
include/: reduce.cuh  transpose.cuh
kernels/self_softmax/: softmax.cu  softmax.py
kernels/softmax/: softmax.cu
scripts/: build.sh
src/: CMakeLists.txt
src/flash_attention/: CMakeLists.txt  flash_attention.cpp
src/flash_attention_cc/: CMakeLists.txt  flash_attention.cu
src/libtorch_example/: CMakeLists.txt
src/reduce/: CMakeLists.txt  reduce_bank_conflict.cu  reduce_idle_thread.cu  reduce_shared_memory.cu  reduce_v0.cu  reduce_warp_divergence.cu
src/transpose/: CMakeLists.txt  transpose_naive.cu  transpose_smem.cu  transpose_tile.cu
