add_executable(reduce_shared_memory reduce_shared_memory.cu)
target_link_libraries(reduce_shared_memory PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(reduce_shared_memory PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
endif()

add_executable(reduce_warp_divergence reduce_warp_divergence.cu)
target_link_libraries(reduce_warp_divergence PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(reduce_warp_divergence PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
endif()